re PR c++/13101 (incorrect warning on initialized extern const function pointer)

2008-07-11  Dodji Seketeli  <dseketel@redhat.com>

	PR c++/13101
	* decl.c (grokdeclarator): Warn about initializing variables
	  of storage class 'extern' only after the type of the declarator
	  has been properly computed.

From-SVN: r137723